Fixed spacings

--- a/src/views/Companies/Company.module.scss
+++ b/src/views/Companies/Company.module.scss
@@ -7,7 +7,7 @@
 .scrollspy {
   display: flex;
   justify-content: space-between;
-  height: 50px;
+  height: 45px;
   align-items: flex-end;
   margin: 0 1.3em;
 
